# dcg

./: .gitignore  CMakeLists.txt  README.md  calculate_I_ref.c  calculate_I_ref.h  declare.c  declare.h  encoder.c  encoder.h  encoder_thread.c  encoder_thread.h  energy_thread.c  energy_thread.h  filters.c  filters.h  magnet_thread.c  magnet_thread.h  main.c  run.sh  tasks.c  tasks.h  timer_thread.c  timer_thread.h  utilities.c  utilities.h  utils.c  utils.h
bitalino/: Makefile  bitalino.cpp  bitalino.h  test  test.cpp
logs/: analyze_emg.m  emg_plot_biceps.m  emg_plot_triceps.m  magnet_plot.m  plot_all_three.m  position_plot.m  power_plot.m
